--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^5.1.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.2",
-    "mysql2": "^3.15.1"
+    "mysql2": "^3.15.1",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
