Docker integration and database connection fixes
- Added .env file with MySQL and MongoDB environment variables
  (DB_HOST, DB_USER, DB_PASS, DB_NAME, DB_PORT, MONGO_URL, MONGO_URL_TEST, NODE_ENV)
- Updated docker-compose.yml to use env_file and ensure app depends on MySQL and MongoDB services
- Fixed Sequelize config (models/index.js) to handle empty passwords correctly for Docker
- Ensured Sequelize uses env vars for host, port, user, password, and database
- Updated Dockerfile.dev for proper volume mounts and nodemon setup
- Cleaned up MongoDB connection to read MONGO_URL / MONGO_URL_TEST based on NODE_ENV
- Prepared setup for development, test, and production environments
- Resolve Environment and Connection Issues:
    - Updated  to use a robust configuration for service dependency and network initialization.
    - Fixed Sequelize config ( and ) to correctly parse and apply all environment variables (, , , etc.).
    - Implemented a wait/sleep loop in the startup script to ensure MySQL is ready before running migrations.

- Fix Migration and Model Casing Errors:
    - Applied  and  to *all* Sequelize models (, , , etc.) to enforce correct lowercase table naming, resolving the persistent  errors in the case-sensitive Docker environment.
    - Increased the  column string size in the  migration to  to accommodate  data, resolving the  error.

- Fix Seeder and Module Loading Conflicts:
    - Refactored all  calls in both Sequelize and MongoDB seeders to use the dynamic  pattern, resolving the  module loading crash.
    - Corrected script paths and typos in the  script to ensure all MongoDB seeders are executed correctly (e.g., fixing the  typo).
    - Removed deprecated  and  options from all MongoDB connection calls.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,30 +14,43 @@ services:
       - DB_HOST=mysql
       - DB_PORT=3306
       - DB_NAME=reservation_db
-      - DB_USER=root
-      - DB_PASS=
+      - DB_USER=reservation_user
+      - DB_PASS=R3serv@tionApp!
       - MONGO_URL=mongodb://mongo:27017/reservation_mongo
     ports:
       - "3000:3000"
     depends_on:
-      - mysql
-      - mongo
+      mysql:
+        condition: service_healthy
+      mongo:
+        condition: service_healthy
     volumes:
       - ./:/usr/src/app
-       - /usr/src/app/node_modules
-    command: npm run dev
+      - /usr/src/app/node_modules
+    
+    command: sh -c './setup.sh'
+    
+   
 
   mysql:
     image: mysql:8.0
     container_name: reservation_mysql
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: ""
+      MYSQL_ROOT_PASSWORD: some_secure_root_password
+      MYSQL_USER: reservation_user
+      MYSQL_PASSWORD: R3serv@tionApp!
       MYSQL_DATABASE: reservation_db
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$${MYSQL_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   mongo:
     image: mongo:6.0
@@ -47,6 +60,12 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      timeout: 5s
+      retries: 5  
 
 volumes:
   mysql_data:
